local-metadata: Fix %20 in deduced titles

When passing a GrlMedia without a title, make sure to get the basename
of the URL, and unescape it before trying to manipulate it.

https://bugzilla.gnome.org/show_bug.cgi?id=725456